Foi realizado a parte de "Mitos e Verdades" do site, criando divs para conteúdo e para o vídeo a ser postado.

--- a/index.html
+++ b/index.html
@@ -51,14 +51,16 @@
 
         </div>
         <div class="video">
-            <div>
+            <div class="central">
+            <div class="central2">   
                 <div class="play">
 
                 </div>
                 <div class="video-conteudo">
-                    <h1>Mitos e verdades</h1>
-                    <p>As fake news existem até na doação de sangue. Descubra neste vídeo o que é verdade ou não.</p>
+                        <h1> <span class="font-weight-bold">Mitos e verdades</span></h1>
+                        <p>As fake news existem até<br>na doação de sangue.<br>Descubra neste vídeo o<br>que é verdade ou não.</p>
                 </div>
+            </div>
             </div>
 
         </div>
@@ -72,3 +74,7 @@
 </body>
 
 </html>
+
+
+
+
