Foi realizado a montagem dos botões e do footer

--- a/index.html
+++ b/index.html
@@ -38,19 +38,38 @@
     <main>
         <div class="apresentacao">
             <div class="apresentacao-conteudo">
-                <img src="img/boneco.png" alt="">
+                <img src="img/boneco.png" id="boneco">
 
                 <p>
                     <span class="font-weight-bold">Doe sangue!</span><br>
                     Seja um verdadeiro <span class="font-weight-bold">HERÓI</span><br>
                     que transforma <span class="font-weight-bold">esperança</span> em vida!
                 </p>
+
             </div>
             <div class="onda">
+                <div class="botao" id="b-1">
+                    <a href="#">
+                        <img src="img/video.png" alt="">
+                    </a>
+                    <p class="botao-p">Mitos e Verdades</p>
+                </div>
+                <div class="botao" id="b-2">
+                    <a href="#">
+                        <img src="img/informacao.png" alt="">
+                    </a>
+                    <p class="botao-p">Descubra se<br>Você pode doar</p>
+                </div>
+                <div class="botao" id="b-3">
+                    <a href="#">
+                        <img src="img/curiosidade.png" alt="">
+                    </a>
+                    <p class="botao-p">Você Sabia?</p>
+                </div>
             </div>
 
         </div>
-        <div class="video">
+        <!-- <div class="video">
             <div>
                 <div class="play">
 
@@ -61,8 +80,16 @@
                 </div>
             </div>
 
-        </div>
+        </div> -->
     </main>
+    <footer>
+        <div>
+            <img src="img/logo_red.png">
+        </div>
+        <div>
+            <small>Copyright 2018 SENAI</small>
+        </div>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
