Terminamos a parte mobile e desktop do site.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
     <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" href="css/estilo.css" media="screen and (max-width: 1192px)">
 </head>
 
 <body>
@@ -52,15 +53,23 @@
         </div>
         <div class="video">
             <div class="central">
-            <div class="central2">   
-                <div class="play">
+                <div class="central2">
+                    <div class="play">
+                        <iframe src="https://www.youtube.com/embed/aPwASSMFUUk" frameborder="0" allow="autoplay; encrypted-media"
+                            allowfullscreen></iframe>
+                    </div>
+                    <div class="video-conteudo">
 
-                </div>
-                <div class="video-conteudo">
                         <h1> <span class="font-weight-bold">Mitos e verdades</span></h1>
-                        <p>As fake news existem até<br>na doação de sangue.<br>Descubra neste vídeo o<br>que é verdade ou não.</p>
+                        <div class="sublinhado"></div>
+                        <p>As fake news existem até<br>na doação de sangue.<br>Descubra neste vídeo o<br>que é verdade
+                            ou não.</p>
+                    </div>
+                    <div class="play1">
+                            <iframe src="https://www.youtube.com/embed/aPwASSMFUUk" frameborder="0" allow="autoplay; encrypted-media"
+                                allowfullscreen></iframe>
+                        </div>
                 </div>
-            </div>
             </div>
 
         </div>
@@ -74,7 +83,3 @@
 </body>
 
 </html>
-
-
-
-
