--- a/index.html
+++ b/index.html
@@ -41,26 +41,35 @@
                 <img src="img/boneco.png" alt="">
 
                 <p>
-                    <span class="font-weight-bold">Doe sangue!</span><br>
-                    Seja um verdadeiro <span class="font-weight-bold">HERÓI</span><br>
-                    que transforma <span class="font-weight-bold">esperança</span> em vida!
+                    <span class="font-weight-bold">Doe sangue!</span>
+                    <br> Seja um verdadeiro
+                    <span class="font-weight-bold">HERÓI</span>
+                    <br> que transforma
+                    <span class="font-weight-bold">esperança</span> em vida!
                 </p>
             </div>
             <div class="onda">
             </div>
 
         </div>
-        <div class="video">
-            <div>
-                <div class="play">
-
-                </div>
-                <div class="video-conteudo">
-                    <h1>Mitos e verdades</h1>
-                    <p>As fake news existem até na doação de sangue. Descubra neste vídeo o que é verdade ou não.</p>
+        <div id="parte-quiz">
+            <div id="meio">
+                <div id="azul">
+                    <div id="esquerda">
+                        <h1 id="primeiro" class="texto">Descubra se</h1>
+                        <h1 class="texto">você pode doar</h1>
+                        <div id="linha" class="texto"></div>
+                        <p class="texto">Esta é a fase incial para se</p>
+                        <p class="texto">tornar um herói!</p>
+                    </div>
+                    <div id="quiz">
+                    </div>
                 </div>
             </div>
-
+            <div id="baixo">
+                <p>Já pensou em salvar uma vida?</p>
+                <a href="#">Seja um herói!</a>
+            </div>
         </div>
     </main>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
