Foi corrigido alguns erros de alinhamento e feito o design para o modelo mobile

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <header>
         <nav class="navbar-expand-xl">
-            <img src="img/logobranco.png" alt="logobranco">
+            <img src="img/logobranco.png" class="collapsed" alt="logobranco">
             <button class="navbar-toggler collapsed nav" type="button" data-toggle="collapse" data-target="#navbarsExample06" aria-controls="navbarsExample06"
                 aria-expanded="false" aria-label="Toggle navigation">
                 <span class="fas fa-bars"></span>
