--- a/index.html
+++ b/index.html
@@ -61,22 +61,19 @@
                 </div>
             </div>
 
-        </div>
+        </div >
         <div class="vcsabia">
             <div id="h1">
                 <h1>Você Sabia?</h1>
             </div>
             <div class="faixa"></div>
             <div class="gotas">
-                <ul>
-                    <li><img src="img/GOTS.png" alt="Gota"></li>
-                    <li><img src="img/GOTS.png" alt="Gota"></li>
-                    <li><img src="img/GOTS.png" alt="Gota"></li>
-                    <li><img src="img/GOTS.png" alt="Gota"></li>
-                    <li><img src="img/GOTS.png" alt="Gota"></li>
-                    <li><img src="img/GOTS.png" alt="Gota"></li>
-
-                </ul>
+                    <div><img src="img/GOTS.png" alt="Gota"></div>
+                    <div><img src="img/GOTS.png" alt="Gota"></div>
+                    <div><img src="img/GOTS.png" alt="Gota"></div>
+                    <div><img src="img/GOTS.png" alt="Gota"></div>
+                    <div><img src="img/GOTS.png" alt="Gota"></div>
+                    <div><img src="img/GOTS.png" alt="Gota"></div>
             </div>
             <div id="div_maior">
                 <div id="curios">
