--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         crossorigin="anonymous">
     <link rel="stylesheet" href="css/estilo.css">
     <link rel="stylesheet" href="css/estilo.css" media="screen and (max-width: 1192px)">
+    <link rel="stylesheet" href="css/estilo.css" media="screen and (max-width: 712px)">
+    <link rel="stylesheet" href="css/estilo.css" media="screen and (max-width: 377px)">
 </head>
 
 <body>
