Mitos e verdades adicionados a versão master.

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <header>
         <nav class="navbar-expand-xl">
             <img src="img/logobranco.png" class="collapsed" alt="logobranco">
-            <button class="navbar-toggler collapsed nav" type="button" data-toggle="collapse" data-target="#navbarsExample06" aria-controls="navbarsExample06"
-                aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler collapsed nav" type="button" data-toggle="collapse" data-target="#navbarsExample06"
+                aria-controls="navbarsExample06" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="fas fa-bars"></span>
             </button>
 
@@ -52,7 +52,7 @@
                 <p>
                     <span class="font-weight-bold">Doe sangue!</span><br>Seja um verdadeiro
                     <span class="font-weight-bold">HERÓI</span><br>que transforma
-                    <span class="font-weight-bold">esperança</span> em vida! 
+                    <span class="font-weight-bold">esperança</span> em vida!
                 </p>
 
             </div>
@@ -81,18 +81,28 @@
             </div>
 
         </div>
-        <!-- <div class="video">
-            <div>
-                <div class="play">
+        <div class="video">
+            <div class="central">
+                <div class="central2">
+                    <div class="play">
+                        <iframe src="https://www.youtube.com/embed/aPwASSMFUUk" frameborder="0" allow="autoplay; encrypted-media"
+                            allowfullscreen></iframe>
+                    </div>
+                    <div class="video-conteudo">
 
-                </div>
-                <div class="video-conteudo">
-                    <h1>Mitos e verdades</h1>
-                    <p>As fake news existem até na doação de sangue. Descubra neste vídeo o que é verdade ou não.</p>
+                        <h1> <span class="font-weight-bold">Mitos e verdades</span></h1>
+                        <div class="sublinhado"></div>
+                        <p>As fake news existem até<br>na doação de sangue.<br>Descubra neste vídeo o<br>que é verdade
+                            ou não.</p>
+                    </div>
+                    <div class="play1">
+                        <iframe src="https://www.youtube.com/embed/aPwASSMFUUk" frameborder="0" allow="autoplay; encrypted-media"
+                            allowfullscreen></iframe>
+                    </div>
                 </div>
             </div>
 
-        </div> -->
+        </div>
     </main>
     <footer>
         <div>
