Realizado o merge com a parte de "Descubra se pode doar".

--- a/index.html
+++ b/index.html
@@ -101,7 +101,25 @@
                     </div>
                 </div>
             </div>
-
+        </div>
+        <div id="parte-quiz">
+            <div id="meio">
+                <div id="azul">
+                    <div id="esquerda">
+                        <h1 id="primeiro" class="texto">Descubra se</h1>
+                        <h1 class="texto">você pode doar</h1>
+                        <div id="linha" class="texto"></div>
+                        <p class="texto">Esta é a fase incial para se</p>
+                        <p class="texto">tornar um herói!</p>
+                    </div>
+                    <div id="quiz">
+                    </div>
+                </div>
+            </div>
+            <div id="baixo">
+                <p>Já pensou em salvar uma vida?</p>
+                <a href="#">Seja um herói!</a>
+            </div>
         </div>
     </main>
     <footer>
