Realizado o merge dos passos para doação.

--- a/index.html
+++ b/index.html
@@ -121,6 +121,27 @@
                 <a href="#">Seja um herói!</a>
             </div>
         </div>
+        <div id="passos-doacao">
+            <h1>Passos para Doação</h1>
+            <div class="faixa"></div>
+            <div id="cards">
+                <div id="card-1">
+                    <p style="font-weight: 500">Seja um novo herói</p>
+                    <img src="img/icon-notes.png" alt="">
+                    <p>Cadastre-se para ser doador</p>
+                </div>
+                <div id="card-2">
+                    <p style="font-weight: 500">Chamada para missão</p>
+                    <img src="img/icon-notification.png" alt="">
+                    <p>Avisaremos quando seu tipo sanguíneo estiver em falta</p>
+                </div>
+                <div id="card-3">
+                    <p style="font-weight: 500">Você salvará uma vida!</p>
+                    <img src="img/icon-calendar.png" alt="">
+                    <p>Agende um dia para que seja realizada a doação</p>
+                </div>
+            </div>
+        </div>
     </main>
     <footer>
         <div>
