Finalizado o merge com o você sabia.

--- a/index.html
+++ b/index.html
@@ -121,6 +121,31 @@
                 <a href="#">Seja um herói!</a>
             </div>
         </div>
+        <div class="vcsabia">
+            <div id="h1">
+                <h1>Você Sabia?</h1>
+            </div>
+            <div class="faixa"></div>
+            <div class="gotas">
+                <div><img src="img/GOTS.png" alt="Gota"></div>
+                <div><img src="img/GOTS.png" alt="Gota"></div>
+                <div><img src="img/GOTS.png" alt="Gota"></div>
+                <div><img src="img/GOTS.png" alt="Gota"></div>
+                <div><img src="img/GOTS.png" alt="Gota"></div>
+                <div><img src="img/GOTS.png" alt="Gota"></div>
+            </div>
+            <div id="div_maior">
+                <div id="curios">
+                    <div>
+                        <h1>Curiosidade nº1</h1>
+                        <div class="faixa A"></div>
+                        <p>Doar sangue não engrossa ou afina o<br>sangue isso é apenas um mito.</p>
+                    </div>
+                    <div id="caixa-red">
+                    </div>
+                </div>
+            </div>
+        </div>
         <div id="passos-doacao">
             <h1>Passos para Doação</h1>
             <div class="faixa"></div>
