centralizei as gotas e outros ajustes.

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 <div id="curios">
                     <div>
                         <h1>Curiosidade nº1</h1>
-                        <div class="faixa A"></div>
+                        <div id="faixa"></div>
                         <p>Doar sangue não engrossa ou afina o<br>sangue isso é apenas um mito.</p>
                     </div>
                     <div id="caixa-red">
