Foi feito o modal com Bootstrap na aba Sobre.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="navbar-collapse collapse justify-content-end" id="navbarsExample06">
                 <ul class="nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Sobre</a>
+                        <a class="nav-link" href="#" data-toggle="modal" data-target="#exampleModal">Sobre</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Cadastro</a>
@@ -182,6 +182,26 @@
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
+      
+      <!-- Modal -->
+      <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Sobre</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <p>Além de procurarmos uma ferramenta que se encaixe com nossa Situação de Aprendizagem, optamos por querer fazer o bem, uma experiência sem igual, buscando ajudar a divulgar a doação de sangue, que contenha algo atrativo para nosso público alvo, e que no final, conseguíssemos fazer com que pessoas se cadastrarem, fornecendo seus contatos. Assim, sabendo que o Hemosc possa contatá-lo para uma possível doação de sangue, ou se for de desejo do doador, ele pode entrar em contato para agendar sua doação.</p>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+            </div>
+          </div>
+        </div>
+      </div>
 </body>
 
 </html>
