Finalizado o site com scroll

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <a class="nav-link" href="#" data-toggle="modal" data-target="#exampleModal">Sobre</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Cadastro</a>
+                        <a class="nav-link" href="http://www.hemosc.org.br/agende-sua-doacao.html">Cadastro</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Requisitos</a>
@@ -194,7 +194,7 @@
               </button>
             </div>
             <div class="modal-body">
-              <p>Além de procurarmos uma ferramenta que se encaixe com nossa Situação de Aprendizagem, optamos por querer fazer o bem, uma experiência sem igual, buscando ajudar a divulgar a doação de sangue, que contenha algo atrativo para nosso público alvo, e que no final, conseguíssemos fazer com que pessoas se cadastrarem, fornecendo seus contatos. Assim, sabendo que o Hemosc possa contatá-lo para uma possível doação de sangue, ou se for de desejo do doador, ele pode entrar em contato para agendar sua doação.</p>
+              <p>A turma do segundo semestre do curso técnico de Informática para Internet 2018/2019, realizou uma Situação de Aprendizagem relacionando as matérias do período juntamente ao HEMOSC de Tubarão, com a finalidade de incentivar a doação de sangue com suporte em um cadastro para doadores aptos a realizar tal atitude e para que sejam convidados a doar quando o tipo sanguíneo do usuário estiver em falta no hemocentro. <br> O intuito desse site é atrair a atenção para a empatia com o próximo necessitado.</p>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
@@ -202,6 +202,10 @@
           </div>
         </div>
       </div>
+
+
+    <script src="js/script.js"></script>
+
 </body>
 
 </html>
