Em nome de arquivo maiúsculas e minúsculas fazem a diferença.

--- a/index.html
+++ b/index.html
@@ -130,17 +130,17 @@
             <div class="faixa"></div>
             <div class="gotas">
                 <div id="div-intermediaria-gotas">
-                    <div class="gota" id="gota01" onclick="trocaCuriosidade(this.id)"><img src="img/icon/icon (4).png"
+                    <div class="gota" id="gota01" onclick="trocaCuriosidade(this.id)"><img src="img/Icon/icon (4).png"
                             alt="Gota"></div>
-                    <div class="gota" id="gota02" onclick="trocaCuriosidade(this.id)"><img src="img/icon/icon (14).png "
+                    <div class="gota" id="gota02" onclick="trocaCuriosidade(this.id)"><img src="img/Icon/icon (14).png "
                             alt="Gota"></div>
-                    <div class="gota" id="gota03" onclick="trocaCuriosidade(this.id)"><img src="img/icon/icon (5).png"
+                    <div class="gota" id="gota03" onclick="trocaCuriosidade(this.id)"><img src="img/Icon/icon (5).png"
                             alt="Gota"></div>
-                    <div class="gota" id="gota04" onclick="trocaCuriosidade(this.id)"><img src="img/icon/icon (7).png"
+                    <div class="gota" id="gota04" onclick="trocaCuriosidade(this.id)"><img src="img/Icon/icon (7).png"
                             alt="Gota"></div>
-                    <div class="gota" id="gota05" onclick="trocaCuriosidade(this.id)"><img src="img/icon/icon (3).png"
+                    <div class="gota" id="gota05" onclick="trocaCuriosidade(this.id)"><img src="img/Icon/icon (3).png"
                             alt="Gota"></div>
-                    <div class="gota" id="gota06" onclick="trocaCuriosidade(this.id)"><img src="img/icon/icon (16).png"
+                    <div class="gota" id="gota06" onclick="trocaCuriosidade(this.id)"><img src="img/Icon/icon (16).png"
                             alt="Gota"></div>
                 </div>
             </div>
